--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,46 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     margin: 20px;
+    background-color: #f2f2f2;
+    color: #333;
+}
+input, button{
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    margin: 5px;
 }
 
-li{
-    margin: 10px 0;
+button{
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+button{ /* para que los botones cambien suavemente*/
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+li{ /*estilo para que cada tarea parezca una tarjeta*/
+    background-color: #fff;
+    padding: 10px;
+    margin: 10px auto;
+    width: 60%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 6px;
+}
+
+li{ /* para que los botones cambien suavemente*/
+    transition: all 0.3s ease;
 }
 
 ul{
